# n-body-gravity-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_cpp.sh  pyproject.toml  render.yaml  requirements.txt
app/: app.py  main.py  models.py  sim_service.py
cpp/: CMakeLists.txt
cpp/include/nbody/: gravity.hpp  leapfrog.hpp  simulator.hpp  state.hpp  vec2.hpp
cpp/src/: bindings.cpp  gravity.cpp  leapfrog.cpp  simulator.cpp
docs/: n_body_physics_and_implementation.md  next_steps.md
nbody_engine/apps/: main.cpp
nbody_engine/include/nbody_engine/: api.hpp  gravity.hpp  leapfrog.hpp  state.hpp
nbody_engine/src/: api.cpp  bindings.cpp  gravity.cpp  leapfrog.cpp
nbody_ui/src/: app.py  simulation.py
python/nbody/: __init__.py  presets.py
static/: app.js  index.html  styles.css
tests/: test_simulator.py
