[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "nbody"
version = "0.1.0"
description = "N-body gravity simulation with C++ core"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=7.0",
]

[tool.scikit-build]
wheel.packages = ["python/nbody"]
cmake.build-type = "Release"
cmake.minimum-version = "3.21"

[tool.pytest.ini_options]
testpaths = ["tests"]
