[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nbody"
version = "0.1.0"
description = "N-body gravity simulation with C++ core"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.41",
]
dev = [
    "pytest>=9.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["python/nbody"]
cmake.build-type = "Release"
cmake.version = ">=3.21"

[tool.pytest.ini_options]
testpaths = ["tests"]
